RESOLVED FIXED277841
REGRESSION (281870@main): [ macOS wk2 ] imported/w3c/web-platform-tests/css/css-view-transitions/new-content-intrinsic-aspect-ratio.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=277841
Summary REGRESSION (281870@main): [ macOS wk2 ] imported/w3c/web-platform-tests/css/c...
Fady Farag
Reported 2024-08-08 17:27:28 PDT
Created attachment 472091 [details] Pixel Diff(22.34%) imported/w3c/web-platform-tests/css/css-view-transitions/new-content-intrinsic-aspect-ratio.html This test is a flaky failure on macOS wk2. HISTORY: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-view-transitions%2Fnew-content-intrinsic-aspect-ratio.html DIFF URL: https://build.webkit.org/results/Apple-Ventura-Release-WK2-Tests/281932@main%20(7599)/imported/w3c/web-platform-tests/css/css-view-transitions/new-content-intrinsic-aspect-ratio-diff.png REGRESSION: The regression point seems to be after 281870@main landed. It flaked in the past, but three to four days ago, it went from 99% passing to 50% passing.
Attachments
Pixel Diff(22.34%) (4.34 KB, image/png)
2024-08-08 17:27 PDT, Fady Farag
no flags
Fady Farag
Comment 1 2024-08-08 18:17:02 PDT
Fady Farag
Comment 2 2024-08-08 18:38:09 PDT
EWS
Comment 3 2024-08-10 12:40:47 PDT
Committed 282087@main (bd9ed7cf0cee): <https://commits.webkit.org/282087@main> Reviewed commits have been landed. Closing PR #31938 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-08-10 12:41:14 PDT
Marta Darbinyan
Comment 5 2024-08-29 15:42:55 PDT
Reopening the bug since the test is not fixed and it had only PR with test expectation update for macOS queue. This is the failing case in iOS EWS queue and looks like the regression started the same time on both macOs and iOS. We need also set test expectation for iOS. Reassigning with Matt since the regression started within the range of 281882@main.
EWS
Comment 6 2024-08-29 16:12:45 PDT
Test gardening commit 282935@main (9c094d74989c): <https://commits.webkit.org/282935@main> Reviewed commits have been landed. Closing PR #32914 and removing active labels.
Matt Woodrow
Comment 7 2024-10-24 19:19:48 PDT
Matt Woodrow
Comment 8 2024-10-24 19:42:36 PDT
EWS
Comment 9 2024-10-31 16:50:39 PDT
Committed 285988@main (838ee16a7341): <https://commits.webkit.org/285988@main> Reviewed commits have been landed. Closing PR #35707 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.