imported/w3c/web-platform-tests/css/css-view-transitions/[new|old]-content-intrinsic-aspect-ratio.html are flaky failures https://bugs.webkit.org/show_bug.cgi?id=277841 <rdar://133608035>

Reviewed by Simon Fraser.

Visibility:hidden element with a layer get omitted from the RenderLayer z-order
tree, since they don't render or hit test.  View transitions walks the
RenderLayer z-order tree in order to determine paint order, and still needs to
find visibility:hidden elements with a view-transition-name.

Repurpose and rename the existing intrically composited descendant flags to be a
'must be in z-order lists' override, and include having a view transition name
in that. Make sure we invalidate the z-order lists if we start/stop having a
name.

* LayoutTests/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::collectLayers):
(WebCore::RenderLayer::setIntrinsicallyComposited):
(WebCore::RenderLayer::updateMustBeInZOrderLists):
(WebCore::RenderLayer::updateAncestorChainHasMustBeInZOrderListsDescendants):
(WebCore::RenderLayer::dirtyAncestorChainHasMustBeInZOrderListsDescendants):
(WebCore::RenderLayer::updateDescendantDependentFlags):
(WebCore::RenderLayer::calculateClipRects const):
(WebCore::RenderLayer::updateAncestorChainHasIntrinsicallyCompositedDescendants): Deleted.
(WebCore::RenderLayer::dirtyAncestorChainHasIntrinsicallyCompositedDescendants): Deleted.
* Source/WebCore/rendering/RenderLayer.h:

Canonical link: https://commits.webkit.org/285988@main